<resources>
    <string name="app_name">Dating App</string>
    <string name="app_version">4.4</string>
    <string name="app_year">2019</string>
    <string name="app_copyright">chat.ifsoft.ru</string>
    <string name="app_email">raccoonsquare@gmail.com</string>
    <string name="app_site">http://chat.ifsoft.ru</string>
    <string name="facebook_app_id" translatable="false">342345433454</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb342345433454</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="rewarded_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="action_login">Log in</string>
    <string name="action_signup">Sign up</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_continue">Continue</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_block">Block</string>
    <string name="action_about">About</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_copy">Copy</string>
    <string name="action_save">Save</string>
    <string name="action_send">Send</string>
    <string name="action_open">Open</string>
    <string name="action_edit">Edit</string>
    <string name="action_reply">Reply</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_report">Report</string>
    <string name="action_remove">Delete</string>
    <string name="action_remove_chat">Delete chat</string>
    <string name="action_deactivate">Deactivate</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_more">Load more</string>
    <string name="action_search">Search</string>
    <string name="action_retry">Retry</string>
    <string name="action_turn_on">Turn on</string>
    <string name="action_turn_off">Turn off</string>
    <string name="action_select_birth">Date of Birth</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Choose from gallery</string>
    <string name="action_copy_url">Copy link</string>
    <string name="action_open_url">Open in a browser</string>
    <string name="settings_allow_messages">Receive messages from anyone</string>
    <string name="settings_allow_messages_summary">You will be able to receive Direct Messages from any user even if you do not follow them.</string>
    <string name="action_enable">Enable</string>
    <string name="action_accept">Accept</string>
    <string name="action_reject">Reject</string>
    <string name="action_pending">Pending&#8230;</string>
    <string name="action_add_to_friends">Add to friends</string>
    <string name="action_remove_from_friends">Remove from friends</string>
    <string name="action_buy_credits">Get More Credits</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_new">New</string>
    <string name="action_profile_edit_photo">Edit photo</string>
    <string name="action_profile_edit_cover">Edit cover</string>
    <string name="action_profile_edit">Edit</string>
    <string name="action_login_with_facebook">Log in with Facebook</string>
    <string name="action_signup_with_facebook">Sign up with Facebook</string>
    <string name="action_connect_with_facebook">Connect with Facebook</string>
    <string name="action_remove_connection">Remove connection</string>
    <string name="action_regular_signup">Back to the regular registration form</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="label_profile_report_0">Spam</string>
    <string name="label_profile_report_1">Hate speech or violence</string>
    <string name="label_profile_report_2">Nudity or Pornography</string>
    <string name="label_profile_report_3">Fake profile</string>
    <string name="label_profile_report_4">Piracy</string>
    <string name="label_gender_select_title">Choose gender</string>
    <string name="label_age">Age</string>
    <string name="label_sex">Gender</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_sex_undefined">Gender Not Set</string>
    <string name="label_sex_male">Gender Male</string>
    <string name="label_sex_female">Gender Female</string>
    <string name="label_profile_information">Profile Information</string>
    <string name="label_profile_activity">Profile Activity</string>
    <string name="label_profile_join">Join Date</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_login">Username</string>
    <string name="placeholder_fullname">Fullname</string>
    <string name="placeholder_location">Location</string>
    <string name="placeholder_facebook_page">Facebook page</string>
    <string name="placeholder_instagram_page">Instagram page</string>
    <string name="placeholder_bio">Bio</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_subject">Subject</string>
    <string name="placeholder_support_detail">What are you contacting us about?</string>
    <string name="placeholder_current_password">Current password</string>
    <string name="placeholder_new_password">New password</string>
    <string name="placeholder_item_category">Category</string>
    <string name="placeholder_item_title">Title</string>
    <string name="placeholder_item_login">Username, email or phone</string>
    <string name="placeholder_item_passw">Password</string>
    <string name="placeholder_item_url">Web site</string>
    <string name="placeholder_item_description">Description</string>
    <string name="placeholder_photo">Add a comment for your post&#8230;</string>
    <string name="placeholder_gift">Add a comment for gift&#8230;</string>
    <string name="placeholder_search">Search</string>
    <string name="placeholder_comment">Type a comment&#8230;</string>
    <string name="placeholder_message">Type a message&#8230;</string>
    <string name="msg_loading">Please wait&#8230;</string>
    <string name="msg_loading_2">Loading. Please wait&#8230;</string>
    <string name="msg_network_error">Please check your Internet connection</string>
    <string name="msg_account_blocked">This account is blocked by a moderator.</string>
    <string name="msg_copied_to_clipboard">Copied to clipboard.</string>
    <string name="msg_enter_item">Please write something or attach photo.</string>
    <string name="msg_enter_msg">Please write something or attach photo.</string>
    <string name="msg_send_msg_error">You can not send a message to the user.</string>
    <string name="msg_gift_sent">Gift has been successfully sent.</string>
    <string name="msg_item_saved">Item has been saved successfully.</string>
    <string name="msg_item_added">Item has been added successfully.</string>
    <string name="msg_password_changed">Password successfully changed</string>
    <string name="msg_settings_saved">Settings successfully saved.</string>
    <string name="msg_ticket_send_success">Your request is accepted! You will receive a response to the email, which is indicated in the request.</string>
    <string name="msg_password_reset_link_sent">A message with link to reset your password has been sent to your email.</string>
    <string name="msg_no_such_user_in_bd">No such user in database</string>
    <string name="msg_connect_to_facebook_success">You have successfully linked application with your account on Facebook!</string>
    <string name="msg_connect_to_facebook_error">Your account on Facebook is already associated with another account.</string>
    <string name="msg_connect_to_facebook_removed">Connect with your Facebook account removed.</string>
    <string name="msg_comment_has_been_added">Comment has been added.</string>
    <string name="msg_chat_has_been_removed">Chat has been removed.</string>
    <string name="msg_profile_removed_from_blacklist">The user is removed from blocked list.</string>
    <string name="msg_profile_link_copied">Profile link copied to clipboard.</string>
    <string name="msg_item_link_copied">Item link copied to clipboard.</string>
    <string name="msg_profile_added_to_blacklist">The user is added to blocked list.</string>
    <string name="msg_success_purchase">Purchase made! Congratulations!</string>
    <string name="msg_success_ghost_mode">"Ghost Mode" has been successfully activated!</string>
    <string name="msg_success_verified_badge">"Verified Badge" successfully activated!</string>
    <string name="label_authorization_via_facebook">Authorization via Facebook.</string>
    <string name="label_online">Online</string>
    <string name="signup_label_terms_and_policies">Terms and Policies</string>
    <string name="settings_notifications_likes">Likes</string>
    <string name="settings_notifications_friends">Friend Requests</string>
    <string name="settings_notifications_messages">Private messages</string>
    <string name="settings_notifications_gifts">Gifts</string>
    <string name="action_gift">Gift</string>
    <string name="settings_privacy_info">Show profile info only for friends</string>
    <string name="settings_privacy_galley">Show my gallery only for friends</string>
    <string name="settings_privacy_friends">Show my friends only for friends</string>
    <string name="settings_privacy_likes">Show profile likes only for friends</string>
    <string name="settings_privacy_gifts">Show gifts only for friends</string>
    <string name="label_gender_any">Any</string>
    <string name="label_signup_invite">User ID who invited you (optional)</string>
    <string name="label_user_id">User ID</string>
    <string name="label_only_with_photo">Only with photo</string>
    <string name="label_only_with_pro_mode">Only with Pro Mode</string>
    <string name="label_additional">Additional</string>
    <string name="label_sex_orientation">Sexual Orientation</string>
    <string name="sex_orientation_1">Heterosexual</string>
    <string name="sex_orientation_2">Gay</string>
    <string name="sex_orientation_3">Lesbian</string>
    <string name="sex_orientation_4">Bisexual</string>
    <string name="label_sex_orientation_any">Any Sex Orientation</string>
    <string name="settings_notifications_matches">Matches</string>
    <string name="nav_hotgame">Hot or Not</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_gallery">My Gallery</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_matches">Matches</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_guests">Profile Guests</string>
    <string name="nav_likes">Profile Likes</string>
    <string name="nav_liked">I Liked</string>
    <string name="nav_upgrades">Upgrades</string>
    <string name="nav_nearby">People Nearby</string>
    <string name="nav_stream">Media Stream</string>
    <string name="nav_feed">Media Feed</string>
    <string name="nav_search">Search</string>
    <string name="nav_settings">Settings</string>
    <string name="label_hotgame_liked_checkbox">Show liked</string>
    <string name="label_hotgame_matches_checkbox">Show matches</string>
    <string name="action_profile_edit_feeling">Set feeling</string>
    <string name="label_secret">Secret</string>
    <string name="label_register_terms">By clicking Continue, you agree to our</string>
    <string name="label_only_moderated">Only verified by moderator</string>
</resources>