<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_action_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_action_gallery"
            android:title="@string/nav_gallery" />
        <item
            android:id="@+id/nav_hotgame"
            android:icon="@drawable/ic_action_hotgame"
            android:title="@string/nav_hotgame" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_action_friends"
            android:title="@string/nav_friends"
            app:actionLayout="@layout/nav_menu_counter" />
        <item
            android:id="@+id/nav_matches"
            android:icon="@drawable/ic_action_matches"
            android:title="@string/nav_matches"
            app:actionLayout="@layout/nav_menu_counter" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_action_messages"
            android:title="@string/nav_messages"
            app:actionLayout="@layout/nav_menu_counter" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_action_notifications"
            android:title="@string/nav_notifications"
            app:actionLayout="@layout/nav_menu_counter" />
        <item
            android:id="@+id/nav_guests"
            android:icon="@drawable/ic_action_guests"
            android:title="@string/nav_guests"
            app:actionLayout="@layout/nav_menu_counter" />
        <item
            android:id="@+id/nav_likes"
            android:icon="@drawable/ic_action_like"
            android:title="@string/nav_likes" />
        <item
            android:id="@+id/nav_liked"
            android:icon="@drawable/ic_action_liked"
            android:title="@string/nav_liked" />
        <item
            android:id="@+id/nav_upgrades"
            android:icon="@drawable/ic_action_upgrade"
            android:title="@string/nav_upgrades" />
        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/ic_action_nearby"
            android:title="@string/nav_nearby" />
        <item
            android:id="@+id/nav_stream"
            android:icon="@drawable/ic_action_stream"
            android:title="@string/nav_stream" />
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_action_feed"
            android:title="@string/nav_feed" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/nav_settings" />
    </group>

</menu>
