<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_new_gift"
        android:icon="@drawable/ic_action_new_gift"
        app:showAsAction="always"
        android:title="@string/action_gift" />

    <item android:id="@+id/action_profile_refresh" android:title="@string/action_refresh"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_profile_report" android:title="@string/action_report"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_profile_block" android:title="@string/action_block"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_profile_edit_feeling" android:title="@string/action_profile_edit_feeling"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_profile_edit_photo" android:title="@string/action_profile_edit_photo"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_profile_edit_cover" android:title="@string/action_profile_edit_cover"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_profile_copy_url" android:title="@string/action_copy_url"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_profile_open_url" android:title="@string/action_open_url"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_profile_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
