<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="allowLikesGCM"
        android:title="@string/settings_notifications_likes">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="allowMatchesGCM"
        android:title="@string/settings_notifications_matches">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="allowFollowersGCM"
        android:title="@string/settings_notifications_friends">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="allowMessagesGCM"
        android:title="@string/settings_notifications_messages">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="allowGiftsGCM"
        android:title="@string/settings_notifications_gifts">
    </CheckBoxPreference>

</PreferenceScreen>
