<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView5" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sex"
                android:id="@+id/textView5"
                android:layout_marginLeft="6dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_male"
                    android:id="@+id/genderMaleCheckBox"
                    android:layout_weight="1" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_female"
                    android:id="@+id/genderFemaleCheckBox"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_additional"
                android:id="@+id/textView_additional"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="6dp" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_hotgame_liked_checkbox"
                android:id="@+id/likedCheckBox"
                android:layout_gravity="center_horizontal" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_hotgame_matches_checkbox"
                android:id="@+id/matchesCheckBox"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sex_orientation"
                android:id="@+id/textView_sex_orientation"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="6dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sexOrientationSpinner"
                android:layout_marginTop="6dp"
                android:spinnerMode="dropdown" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>